--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
